# alligator

./: CMakeLists.txt
src/alligator/: alligator.h  camera.cpp  camera.h  game.cpp  game.h  geometry.h  iinputprocessor.h  input.cpp  input.h  math.h  matrix.h  rng.h  spritesheet.cpp  spritesheet.h
src/alligator/audio/: audio.cpp  audio.h  audiosample.cpp  audiosample.h  audiostream.cpp  audiostream.h
src/alligator/camera/: camera.cpp  camera.h
src/alligator/debug/: cli.h
src/alligator/game/: game.cpp  game.h  iscreen.h
src/alligator/graphics/: animation.cpp  animation.h  spritesheet.cpp  spritesheet.h
src/alligator/input/: iinputprocessor.h  input.cpp  input.h
src/alligator/util/: math.cpp  math.h  matrix.h  rng.cpp  rng.h
